Commit before branch

--- a/QueueIT/Views/Account/UserHome.cshtml
+++ b/QueueIT/Views/Account/UserHome.cshtml
@@ -1,4 +1,4 @@
-@model QueueIT.Controllers.Account.UserHomeViewModel;
+@model QueueIT.Models.UserHomeViewModel;
 @{
     ViewBag.Title = "Home";
     ViewBag.Teams = Model.TeamsList.ToList();
