--- a/QueueIT/Views/Home/Privacy.cshtml
+++ b/QueueIT/Views/Home/Privacy.cshtml
@@ -1,6 +1,8 @@
 ﻿@{
     ViewData["Title"] = "Privacy Policy";
 }
-<h1>@ViewData["Title"]</h1>
+<div align="center">
+    <h4 class="display-7 primary-text">Good Luck</h4>
+</div>
 
-<p>Use this page to detail your site's privacy policy.</p>
+
