Save spot/check point commit

--- a/QueueIT/Views/Home/Index.cshtml
+++ b/QueueIT/Views/Home/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using Microsoft.AspNetCore.Mvc.ModelBinding
-@model RegisterModel
+﻿@model RegisterModel
 @{
     ViewData["Title"] = "Home Page";
 }
