--- a/QueueIT/Views/Shared/Error.cshtml
+++ b/QueueIT/Views/Shared/Error.cshtml
@@ -2,24 +2,26 @@
 @{
     ViewData["Title"] = "Error";
 }
-
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
-
-@if (Model.ShowRequestId)
-{
-    <p>
-        <strong>Request ID:</strong> <code>@Model.RequestId</code>
-    </p>
-}
-
-<h3>Development Mode</h3>
-<p>
-    Swapping to <strong>Development</strong> environment will display more detailed information about the error that occurred.
-</p>
-<p>
-    <strong>The Development environment shouldn't be enabled for deployed applications.</strong>
-    It can result in displaying sensitive information from exceptions to end users.
-    For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
-    and restarting the app.
-</p>
+<br/><br/><br/>
+<div align="center" class="background-grey rounded shadow">
+    <h4 class="text-danger display-1">404</h4>
+    <h2 class="text-danger">The page you were looking for was moved or doesn't exist.</h2>
+    <br/>
+</div>
+@* @if (Model.ShowRequestId) *@
+@* { *@
+@*     <p> *@
+@*         <strong>Request ID:</strong> <code>@Model.RequestId</code> *@
+@*     </p> *@
+@* } *@
+@* *@
+@* <h3>Development Mode</h3> *@
+@* <p> *@
+@*     Swapping to <strong>Development</strong> environment will display more detailed information about the error that occurred. *@
+@* </p> *@
+@* <p> *@
+@*     <strong>The Development environment shouldn't be enabled for deployed applications.</strong> *@
+@*     It can result in displaying sensitive information from exceptions to end users. *@
+@*     For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong> *@
+@*     and restarting the app. *@
+@* </p> *@
