--- a/QueueIT/Views/Teams/Show.cshtml
+++ b/QueueIT/Views/Teams/Show.cshtml
@@ -4,7 +4,9 @@
     ViewBag.Title = "Team Name";
     Layout = "_LoggedInLayout";
 }
-
+<div id="team-profile-alert-placeholder">
+    
+</div>
 <br/><br/>
 <div align="center">
 <div id="team-profile-container" class="rounded shadow">
@@ -35,7 +37,7 @@
     <textarea class="form-control modal-input" rows="4" id="team-desc-edit" style="display: none">@Model.Description</textarea>
 </div>
 
-@if (@Model.TeamName != "Personal")
+@if (@Model.TeamName != "Personal" && Model.IsCurrentUserAdmin)
 {
     <button id="save-team-profile-btn" class="my-btn my-btn-primary m-15" style="display: none;">Save Team Profile</button>
     <button id="edit-team-profile-btn" class="my-btn my-btn-primary m-15">Edit Team Profile</button>
@@ -86,10 +88,14 @@ else
         <br/>
         <div id="team-profile-members-header">
             <h4 class="display-7 secondary-text" style="float: left">Team Members <strong>(@Model.TeamMembers.Count)</strong></h4>
-            <button id="inv-mbr-btn" class="my-btn my-btn-primary" style="float: right"
-                    data-toggle="modal" data-target="#exampleModal">
-                Invite Members
-            </button>
+            
+            @if (Model.IsCurrentUserAdmin)
+            {
+                <button id="inv-mbr-btn" class="my-btn my-btn-primary" style="float: right"
+                        data-toggle="modal" data-target="#exampleModal">
+                    Invite Members
+                </button>
+            }
         </div>
         <table id="team-profile-members" class="table table-responsive-sm">
             <tbody>
@@ -117,63 +123,122 @@ else
                             }
                         </div>
                     </td>
-                    <td class="team-member-td">
-                        <div class="input-group">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text">Role</span>
-                            </div>
-                            @if (Model.TeamCreatorId == user.Id)
-                            {
-                                <span id="team-owner-select" class="custom-select" title="Cannot change role of Team Owner">
-                                    Team Owner
-                                </span>
-                            }
-                            else
-                            {
-                                foreach (var member in @Model.TeamMembers)
+                    @if(Model.CurrentUserId == Model.TeamCreatorId)
+                    {
+                        <td class="team-member-td">
+                            <div class="input-group">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text">Role</span>
+                                </div>
+                                @if (Model.TeamCreatorId == user.Id)
                                 {
-                                    if (member.UserId == user.Id)
+                                    <span id="team-owner-select" class="custom-select" title="Cannot change role of Team Owner">
+                                        Team Owner
+                                    </span>
+                                }
+                                else
+                                {
+                                    foreach (var member in @Model.TeamMembers)
                                     {
-                                        if (member.IsAdmin)
+                                        if (member.UserId == user.Id)
                                         {
-                                            <select class="custom-select" onchange="changeRole('@member.UserId', '@member.TeamId')">
-                                                <option selected value="Admin">Admin</option>
-                                                <option value="Normal">Normal</option>
-                                            </select>
-                                        }
-                                        else
-                                        {
-                                            <select class="custom-select" onchange="changeRole('@member.UserId', '@member.TeamId')">
-                                                <option value="Admin">Admin</option>
-                                                <option selected value="Normal">Normal</option>
-                                            </select>
+                                            if (member.IsAdmin)
+                                            {
+                                                <select class="custom-select" onchange="changeRole('@member.UserId', '@member.TeamId')">
+                                                    <option selected value="Admin">Admin</option>
+                                                    <option value="Normal">Normal</option>
+                                                </select>
+                                            }
+                                            else
+                                            {
+                                                <select class="custom-select" onchange="changeRole('@member.UserId', '@member.TeamId')">
+                                                    <option value="Admin">Admin</option>
+                                                    <option selected value="Normal">Normal</option>
+                                                </select>
+                                            }
                                         }
                                     }
                                 }
-                            }
-                        </div>
-                    </td>
-                    <td id="member-rm-td" class="team-member-td">
-                        <div align="right">
-                            @if (Model.TeamCreatorId == user.Id)
-                            {
-                                <button id="rm-team-member" disabled title="Cannot remove Team Owner"
-                                        class="shadow">
-                                    remove
-                                </button>
-                            }
-                            else
-                            {
-                                <button id="rm-team-member" onclick="rmTeamMember('@user.Id','@Model.TeamId')" class="shadow">
-                                    remove
-                                </button>
-                            }
-                        </div>
-                    </td>
+                            </div>
+                        </td>
+                        <td id="member-rm-td" class="team-member-td">
+                            <div align="right">
+                                @if (Model.TeamCreatorId == user.Id)
+                                {
+                                    <button id="rm-team-member" disabled title="Cannot remove Team Owner"
+                                            class="shadow">
+                                        remove
+                                    </button>
+                                }
+                                else
+                                {
+                                    <button id="rm-team-member" onclick="rmTeamMember('@user.Id','@Model.TeamId')" class="shadow">
+                                        remove
+                                    </button>
+                                }
+                            </div>
+                        </td>
+                    }
+                    else
+                    {
+                        <td class="team-member-td">
+                            <div class="input-group">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text">Role</span>
+                                </div>
+                                @if (Model.TeamCreatorId == user.Id)
+                                {
+                                    <span id="team-owner-select" class="custom-select" title="Cannot change role of Team Owner">
+                                        Team Owner
+                                    </span>
+                                }
+                                else
+                                {
+                                    foreach (var member in @Model.TeamMembers)
+                                    {
+                                        if (member.UserId == user.Id)
+                                        {
+                                            if (member.IsAdmin)
+                                            {
+                                                <span id="team-owner-select" class="custom-select" title="Only Team Owner can change a team member's role">
+                                                    Admin
+                                                </span>
+                                            }
+                                            else
+                                            {
+                                                <span id="team-owner-select" class="custom-select" title="Only Team Owner can change a team member's role">
+                                                    Normal
+                                                </span>
+                                            }
+                                        }
+                                    }
+                                }
+                            </div>
+                        </td>
+                        <td id="member-rm-td" class="team-member-td">
+                            <div align="right">
+                                @if (Model.TeamCreatorId == user.Id)
+                                {
+                                    <button id="rm-team-member" disabled title="Cannot remove Team Owner"
+                                            class="shadow">
+                                        remove
+                                    </button>
+                                }
+                                else
+                                {
+                                    <button id="rm-team-member" disabled title="Only Team Owner can remove team members" class="shadow">
+                                        remove
+                                    </button>
+                                }
+                            </div>
+                        </td>
+                    }
                 </tr>
             }
             </tbody>
         </table>
+        <br/>
+        <h4 class="display-9 disabled-text">Admins can edit the team information and invite new team members.</h4>
     </div>
     <div class="tab-pane fade" id="nav-settings" role="tabpanel" aria-labelledby="nav-profile-tab">
         <br/>
@@ -297,8 +362,8 @@ else
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js" type="text/javascript">
     </script>
     <script type="text/javascript">
-        
-        
+
+
         if ("@Model.TeamName" === "Personal") {
             $('#inv-mbr-btn').attr("disabled", true);
             $('#inv-mbr-btn').attr("title", "Cannot add members to Personal Team");
@@ -306,7 +371,7 @@ else
             $('#del-team-btn').attr("disabled", true);
             $('#del-team-btn').attr("title", "Cannot delete Personal Team");
         }
-        
+
         function rmTeamMember(userId, teamId) {
             $.ajax({
                 type: 'post',
@@ -323,7 +388,7 @@ else
                 }
             });
         }
-        
+
         function changeRole(userId, teamId) {
             $.ajax({
                 type: 'post',
@@ -340,8 +405,8 @@ else
                 }
             });
         };
-        
-    
+
+
         $('#edit-team-profile-btn').click(function() {
             var width = $('#team-profile-container').width();
             $('#team-desc').toggle();
@@ -354,15 +419,30 @@ else
         });
 
         $('#save-team-profile-btn').click(function() {
-            var name = $('#team-name-edit').val();
-            var desc = $('#team-desc-edit').val();
-            var id = @Model.TeamId;
-            $('<form action="/Teams/SaveProfile" method="post"/>')
-                .append($('<input type="hidden" name="teamId" value="' + id + '"/>'))
-                .append($('<input type="hidden" name="newTeamName" value="' + name + '"/>'))
-                .append($('<input type="hidden" name="newTeamDescription" value="' + desc + '"/>'))
-                .appendTo($(document.body))
-                .submit();
+            var nameLength = $('#team-name-edit').val().length;
+            var descLength = $('#team-desc-edit').val().length;
+            if (nameLength > 50 || nameLength < 1) {
+                $('#team-name-edit').css("border", "1px solid red");
+                if (nameLength > 50) {
+                    showTeamAlert("Team name shouldn't be greater than 50 characters.", "alert-danger");
+                } else {
+                    showTeamAlert("Team name is required", "alert-danger");
+                }
+            } else if (descLength > 255) {
+                $('#team-desc-edit').css("border", "1px solid red");
+                showTeamAlert("Team description is not required, but limited to 255 characters.", "alert-danger");   
+            } else {
+
+                var name = $('#team-name-edit').val();
+                var desc = $('#team-desc-edit').val();
+                var id = @Model.TeamId;
+                $('<form action="/Teams/SaveProfile" method="post"/>')
+                    .append($('<input type="hidden" name="teamId" value="' + id + '"/>'))
+                    .append($('<input type="hidden" name="newTeamName" value="' + name + '"/>'))
+                    .append($('<input type="hidden" name="newTeamDescription" value="' + desc + '"/>'))
+                    .appendTo($(document.body))
+                    .submit();
+            }
         });
 
         $('#inv-member-btn').click(function() {
@@ -398,7 +478,7 @@ else
                     teamId: teamId
                 }),
                 success: function(resp) {
-                    switch(resp) {
+                    switch (resp) {
                     case 1:
                         showAlert("User Not Found", "alert-danger");
                         break;
@@ -409,9 +489,9 @@ else
                         showAlert("Cannot Add Member to Personal Team", "alert-danger");
                         break;
                     default:
-                        showAlert("User Added to Team!", "alert-success");
-                        
-                            
+                        showAlert("An invitation to join your team has been sent!", "alert-success");
+
+
                     }
                 }
             });
@@ -419,6 +499,20 @@ else
 
         function showAlert(message, alertType) {
             $('#alert_placeholder').append('<div id="alertDiv" style="margin-bottom: 0" class="fade show alert ' +
+                alertType +
+                '"><a class="close" data-dismiss="alert">&times;</a><span>' +
+                message +
+                '</span></div>');
+
+            setTimeout(
+                function() {
+                    $("#alertDiv").remove();
+                },
+                5000);
+        }
+        
+        function showTeamAlert(message, alertType) {
+            $('#team-profile-alert-placeholder').append('<div id="alertDiv" class="fade show alert ' +
                 alertType +
                 '"><a class="close" data-dismiss="alert">&times;</a><span>' +
                 message +
