fixed all known bugs

--- a/QueueIT/Views/Account/Profile.cshtml
+++ b/QueueIT/Views/Account/Profile.cshtml
@@ -40,9 +40,17 @@
                 <div style="width: 75%">
                     <div align="left">
                         <h4 class="primary-text display-8">Queues</h4>
-                        <div class="container-col">
-                            <div id="q-container" class="container-row rounded shadow background-dark-grey">
-
+                        <div id="q-profile-container" class="container">
+                            <div class="row">
+                                <div class="scrollable-qs">
+                                    <table class="table">
+                                        <tbody>
+                                        <tr id="q-scroll">
+                                            
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
                             </div>
                         </div>
                     </div>
