--- a/QueueIT/Views/Home/ResetPassword.cshtml
+++ b/QueueIT/Views/Home/ResetPassword.cshtml
@@ -28,11 +28,11 @@
                         </div>
                     </div>
                 </div>
-                <button class="my-btn my-btn-primary">Submit</button>
+                <button type="button" id="submit" class="my-btn my-btn-primary">Submit</button>
                 <br/><br/>
                 <div class="errors" asp-validation-summary="All"></div>
             </form>
         </div>
-        </div>
+    </div>
 </div>
 
