--- a/QueueIT/Views/Account/UserHome.cshtml
+++ b/QueueIT/Views/Account/UserHome.cshtml
@@ -2,12 +2,13 @@
 @{
     ViewBag.Title = "Home";
     ViewBag.Teams = Model.TeamsList.ToList();
-    ViewBag.Queues = Model.QueuesList.ToList(); 
+    ViewBag.Queues = Model.QueuesList.ToList();
     Layout = "_LoggedInLayout";
 }
 <br/>
 <div align="center">
-    <h4 class="display-5 primary-text"></h4>
+    <h4 class="display-5 primary-text" id="welcome-back" style="display: none;">Welcome back to QueueIT!</h4>
+    <h4 class="display-5 primary-text" id="welcome-to" style="display: none;">Welcome to QueueIT!</h4>
 </div>
 <br/>
 <div class="rounded user-home-bg shadow-lg">
@@ -55,32 +56,43 @@
         </div>
 
         <div class="home-column-70">
-            <div class="container-col p-10" align="left">
+            <div class="container-col p-10" align="left" style="max-width:750px;">
 
                 @foreach (var team in Model.TeamsList)
                 {
-                    <div>
-                        <h4 class="display-8 primary-text m-10">@team.Name</h4>
-                        <div class="container-row home-cards">
-                            @foreach (var queue in Model.QueuesList)
-                            {
-                                if (queue.TeamId == team.Id)
-                                {
-                                    <div class="card m-10">
-                                        <form asp-action="Show" asp-controller="Queues"
-                                              method="GET" asp-route-queueId="@queue.Id">
-                                            <button class="card-body home-card grow shadow-lg">
-                                                @queue.Title
+                    <h4 class="display-8 primary-text m-10">@team.Name</h4>
+
+                    <div id="q-userhome-container" class="container">
+                        <div class="row">
+                            <div class="scrollable-qs">
+                                <table class="table">
+                                <tr id="q-userhome-scroll">
+                                    @foreach (var queue in Model.QueuesList)
+                                    {
+                                        if (queue.TeamId == team.Id)
+                                        {
+                                            <td>
+                                                <div class="card m-10">
+                                                    <form asp-action="Show" asp-controller="Queues"
+                                                          method="GET" asp-route-queueId="@queue.Id">
+                                                        <button class="card-body home-card shadow-lg">
+                                                            @queue.Title
+                                                        </button>
+                                                    </form>
+                                                </div>
+                                            </td>
+                                        }
+                                    }
+                                    <td>
+                                        <div class="card m-10">
+                                            <button class="card-body home-card grow shadow-lg" data-toggle="modal"
+                                                    data-target="#CreateQueueModal" data-id="@team.Id" aria-hidden="true">
+                                                <span class="thick-plus">+</span> Add a Queue
                                             </button>
-                                        </form>
-                                    </div>
-                                }
-                            }
-                            <div class="card m-10">
-                                <button class="card-body home-card grow shadow-lg" data-toggle="modal"
-                                        data-target="#CreateQueueModal" data-id="@team.Id" aria-hidden="true">
-                                    <span class="thick-plus">+</span> Add a Queue
-                                </button>
+                                        </div>
+                                    </td>
+                                </tr>
+                                </table>
                             </div>
                         </div>
                     </div>
@@ -89,3 +101,18 @@
         </div>
     </div>
 </div>
+
+@section Scripts {
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js" type="text/javascript">
+    </script>
+    <script type="text/javascript">
+        $(document).ready(function() {
+            if (localStorage.getItem('wasVisited') === undefined) {
+                localStorage.setItem('wasVisited', '1');
+                $('#welcome-to').toggle();
+            } else {
+                $('#welcome-back').toggle();
+            }
+        });
+    </script>
+}
