--- a/QueueIT/Views/Teams/Show.cshtml
+++ b/QueueIT/Views/Teams/Show.cshtml
@@ -1,7 +1,7 @@
 @model QueueIT.Models.TeamShowViewModel
 
 @{
-    ViewBag.Title = "Team Name";
+    ViewBag.Title = Model.TeamName;
     Layout = "_LoggedInLayout";
 }
 <div id="team-profile-alert-placeholder">
@@ -21,12 +21,12 @@
     <div id="privacy-header" align="left">
         @if (Model.IsPrivate)
         {
-            <img class="lock" src="/lock.png" alt="">
+            <img class="lock" src="/lock.png" alt=""/>
             <h4 id="is-private" class="secondary-text display-8">&nbsp;Private</h4>
-        }
+        } 
         else
         {
-            <img class="lock" src="/unlock.png" alt="">
+            <img class="lock" src="/unlock.png" alt=""/>
             <h4 id="is-private" class="secondary-text display-8">&nbsp;Public</h4>
         }
     </div>
@@ -66,22 +66,42 @@ else
 <div class="tab-content background-grey" id="nav-tabContent">
     <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
         <br/>
-        <div class="container-row">
-            @foreach (var queue in Model.QueuesList)
-            {
-                <div class="card m-10">
-                    <form asp-action="Show" asp-controller="Queues"
-                          method="GET" asp-route-queueId="@queue.Id">
-                        <button class="card-body home-card grow shadow">@queue.Title</button>
-                    </form>
+        <div class="container" style="width: 75%">
+            <div class="row">
+                <div class="scrollable-qs">
+                    <table class="table">
+                        <tr>
+                            @foreach (var queue in Model.QueuesList)
+                            {
+                                <td>
+                                    <div class="card m-10">
+                                        <form asp-action="Show" asp-controller="Queues"
+                                                method="GET" asp-route-queueId="@queue.Id">
+                                            <button class="card-body home-card shadow">@queue.Title</button>
+                                        </form>
+                                    </div>
+                                </td>
+                            }
+                            
+                        </tr>
+                    </table>
                 </div>
-            }
-            <div class="card m-10">
-                <button class="card-body home-card grow shadow-lg" data-toggle="modal"
-                        data-target="#CreateQueueModal" aria-hidden="true">
-                    <span class="thick-plus">+</span> Add a Queue
-                </button>
-            </div>
+            </div>            
+@*             @foreach (var queue in Model.QueuesList) *@
+@*             { *@
+@*                 <div class="card m-10"> *@
+@*                     <form asp-action="Show" asp-controller="Queues" *@
+@*                           method="GET" asp-route-queueId="@queue.Id"> *@
+@*                         <button class="card-body home-card grow shadow">@queue.Title</button> *@
+@*                     </form> *@
+@*                 </div> *@
+@*             } *@
+@*             <div class="card m-10"> *@
+@*                 <button class="card-body home-card grow shadow-lg" data-toggle="modal" *@
+@*                         data-target="#CreateQueueModal" aria-hidden="true"> *@
+@*                     <span class="thick-plus">+</span> Add a Queue *@
+@*                 </button> *@
+@*             </div> *@
         </div>
     </div>
     <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
